fix alignment of checkbox and delete icons in people table

--- a/app/assets/stylesheets/modules/forms.css.scss
+++ b/app/assets/stylesheets/modules/forms.css.scss
@@ -125,6 +125,7 @@ tbody {
 }
 th, td {
   text-align: center;
+  vertical-align: middle;
   padding: 5px 20px;
   border-left: 1px solid $grey-lt;
   &:first-child {
